--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.3.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
